# fastapi-todo

./: .gitignore  pyproject.toml
src/: alembic.ini  database.py  main.py  ui.py
src/auth/: __init__.py  api.py  auth_jwt.py  auth_ui.py  dependencies.py  router.py  schemas.py  ui.py  utils.py
src/auth/database/: models.py  utils.py
src/migrations/: env.py
src/todo/: __init__.py  api.py  dependencies.py  router.py  schemas.py  ui.py
src/todo/database/: models.py  utils.py
